# FrdReader

./: .gitignore  CMakeLists.txt  FrdReader.sln  README-INSTALL-LINUX.md  README.md  install_pyfrd.sh
FrdCommonTest/: FrdCommonTest.csproj  Program.cs
FrdReader/: AssemblyInfo.cpp  FrdReader.cpp  FrdReader.h  FrdReader.vcxproj  FrdReader.vcxproj.filters  FrdReaderCommon.cpp  FrdReaderCommon.h
libfrd/: CMakeLists.txt  FrdReader.cpp  FrdReader.h  dllmain.cpp  framework.h  frd_reader.cpp  frd_reader.h  frd_reader2.cpp  libfrd.vcxproj  libfrd.vcxproj.filters  util.h
pyfrd/: CMakeLists.txt  framework.h  pyFrdReader.cpp  pyFrdReader.h  pyfrd.cpp  pyfrd.vcxproj  pyfrd.vcxproj.filters  pyproject.toml
